# ros_homework4

./: CMakeLists.txt  README.md  package.xml
include/: kinematic.h  workspace_checker.h
launch/: display.launch
src/: kinematic.cpp  main.cpp  publisher.cpp  workspace_checker.cpp
urdf/: scarabot.urdf
